2010-03-12  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-05
	* do it again (fix capitalization)
	
2010-03-12  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-04 (01-09-03 used by Bill) 
	* Migration of test away from getter functions of FEDNumbering

2010-03-05  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-02 (V01-09-01 used by Bill for cosmethics)
	* more fixes for HLT cters and DQM

2010-02-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-00
	* fixes for correct reporting of HLT cters at LS boundary

2010-02-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-08-02
	* merge from branch for 350

2010-01-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-08-01-01
	* backport for 333 fixes to EOL handling (slc4)

2010-01-12  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-08-01-00
	* backport for 333 to use with slc4 tests
	
2010-01-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-08-01
	* put back forgotten bst timestamp setting (merge from branch)

2010-01-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-08-00
	* Implementation of end-of-ls signal event
	
2009-12-09 William Tanenbaum <wmtan@fnal.gov>
	* tag V01-07-03
	* Use EventID constructor taking three arguments, run, lumi, event numbers
	The EventID constructor taking only run and event numbers is being removed.

2009-10-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-06-18-00
	* branch tag for 327 compat
	* use bst timestamp
	
2009-10-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-07-01-00
	* branch for 33x to use bst timestamp
	
2009-10-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-07-00/01
	* Undocumented mods by Bill to reuse event principal

2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-06-18
	* Complete the migration away from getter functions for FEDNumbering
	
2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-06-17