@@ -1,7 +1,7 @@
 /** \file 
  *
- *  $Date: 2010/02/15 13:42:21 $
- *  $Revision: 1.41 $
+ *  $Date: 2010/03/05 17:06:58 $
+ *  $Revision: 1.42 $
  *  \author N. Amapane - S. Argiro'
  */
 
@@ -30,6 +30,15 @@
 #include <sys/time.h>
 #include <sys/types.h>
 #include <linux/unistd.h>
+
+#include "xgi/Method.h"
+#include "xgi/Utils.h"
+
+#include "cgicc/Cgicc.h"
+#include "cgicc/FormEntry.h"
+#include "cgicc/HTMLClasses.h"
+
+#include "boost/tokenizer.hpp"
 
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -469,4 +478,113 @@ namespace edm {
     pthread_mutex_unlock(&mutex_);
     ::usleep(1000);//allow other thread to lock
   }  
+
+  void DaqSource::defaultWebPage(xgi::Input *in, xgi::Output *out)
+  {
+      std::string path;
+      std::string urn;
+      std::string mname;
+      std::string query;
+      std::string original_referrer_;
+      try 
+	{
+	  cgicc::Cgicc cgi(in);
+	  if ( xgi::Utils::hasFormElement(cgi,"gotostopping") )
+	    {
+	      noMoreEvents_=true;
+	    }
+	  if ( xgi::Utils::hasFormElement(cgi,"module") )
+	    mname = xgi::Utils::getFormElement(cgi, "module")->getValue();
+	  cgicc::CgiEnvironment cgie(in);
+	  if(original_referrer_ == "")
+	    original_referrer_ = cgie.getReferrer();
+	  path = cgie.getPathInfo();
+	  query = cgie.getQueryString();
+	}
+      catch (const std::exception & e) 
+	{
+	  // don't care if it did not work
+	}
+
+      using std::endl;
+      *out << "<html>"                                                   << endl;
+      *out << "<head>"                                                   << endl;
+
+
+      *out << "<STYLE type=\"text/css\"> #T1 {border-width: 2px; border: solid blue; text-align: center} </STYLE> "                                      << endl; 
+      *out << "<link type=\"text/css\" rel=\"stylesheet\"";
+      *out << " href=\"/" <<  urn
+	   << "/styles.css\"/>"                   << endl;
+
+      *out << "<title>" << moduleName_
+	   << " MAIN</title>"                                            << endl;
+
+      *out << "</head>"                                                  << endl;
+      *out << "<body onload=\"loadXMLDoc()\">"                           << endl;
+      *out << "<table border=\"0\" width=\"100%\">"                      << endl;
+      *out << "<tr>"                                                     << endl;
+      *out << "  <td align=\"left\">"                                    << endl;
+      *out << "    <img"                                                 << endl;
+      *out << "     align=\"middle\""                                    << endl;
+      *out << "     src=\"/evf/images/bugicon.jpg\""	                 << endl;
+      *out << "     alt=\"main\""                                        << endl;
+      *out << "     width=\"90\""                                        << endl;
+      *out << "     height=\"64\""                                       << endl;
+      *out << "     border=\"\"/>"                                       << endl;
+      *out << "    <b>"                                                  << endl;
+      *out <<             moduleName_                                    << endl;
+      *out << "    </b>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "    <a href=\"/urn:xdaq-application:lid=3\">"             << endl;
+      *out << "      <img"                                               << endl;
+      *out << "       align=\"middle\""                                  << endl;
+      *out << "       src=\"/hyperdaq/images/HyperDAQ.jpg\""             << endl;
+      *out << "       alt=\"HyperDAQ\""                                  << endl;
+      *out << "       width=\"32\""                                      << endl;
+      *out << "       height=\"32\""                                     << endl;
+      *out << "       border=\"\"/>"                                     << endl;
+      *out << "    </a>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "    <a href=\"" << original_referrer_  << "\">"           << endl;
+      *out << "      <img"                                               << endl;
+      *out << "       align=\"middle\""                                  << endl;
+      *out << "       src=\"/evf/images/spoticon.jpg\""			 << endl;
+      *out << "       alt=\"main\""                                      << endl;
+      *out << "       width=\"32\""                                      << endl;
+      *out << "       height=\"32\""                                     << endl;
+      *out << "       border=\"\"/>"                                     << endl;
+      *out << "    </a>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "</tr>"                                                    << endl;
+      *out << "</table>"                                                 << endl;
+
+      *out << "<hr/>"                                                    << endl;
+  
+      *out << cgicc::form().set("method","GET").set("action", path ) 
+	   << std::endl;
+      boost::char_separator<char> sep("&");
+      boost::tokenizer<boost::char_separator<char> > tokens(query, sep);
+      for (boost::tokenizer<boost::char_separator<char> >::iterator tok_iter = tokens.begin();
+	   tok_iter != tokens.end(); ++tok_iter){
+	size_t pos = (*tok_iter).find_first_of("=");
+	if(pos != std::string::npos){
+	  std::string first  = (*tok_iter).substr(0    ,                        pos);
+	  std::string second = (*tok_iter).substr(pos+1, (*tok_iter).length()-pos-1);
+	  *out << cgicc::input().set("type","hidden").set("name",first).set("value", second) 
+	       << std::endl;
+	}
+      }
+
+      *out << cgicc::input().set("type","hidden").set("name","gotostopping").set("value","true")
+	   << std::endl;
+      *out << cgicc::input().set("type","submit").set("value","Go To Stopping")  	     << std::endl;
+      *out << cgicc::form()						   << std::endl;  
+
+      *out << "</body>"                                                  << endl;
+      *out << "</html>"                                                  << endl;
+  }
 }
